<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/dialog_name_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/dialog_name_caption" />

    <TextView
        android:id="@+id/dialog_name"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialog_coordinates_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/dialog_coordinates_caption" />

    <TextView
        android:id="@+id/dialog_coordinates"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/common_google_signin_btn_text_light_pressed"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialog_radius_caption"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_radius_caption" />

    <EditText
        android:id="@+id/dialog_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/dialog_radius_hint"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/dialog_vibrateonly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_vibrateonly_caption" />

</LinearLayout>